[tool.poetry]
name = "sample-llm"
version = "0.1.0"
description = ""
authors = ["Molly Trombley-McCann <molly.kayline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
